# court-coverage-atlas

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy-pages.yml
scripts/: build_data.py
src/: main.rs
static/: app.js  index.html  styles.css
static/data/: counties.geojson  coverage.json
