[package]
name = "court-coverage-atlas"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
mime_guess = "2.0.5"
rust-embed = "8.11.0"
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.6.11", features = ["compression-br", "compression-gzip", "trace"] }
